k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radicale-service
  labels:
    app: radicale
spec:
  type: LoadBalancer
  selector:
    app: radicale
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5232
