k8s/service_latest.yaml
apiVersion: v1
kind: Service
metadata:
  name: radicale-service-latest
  labels:
    app: radicale
    version: latest
spec:
  type: LoadBalancer
  selector:
    app: radicale
    version: latest
  ports:
  - protocol: TCP
    port: 80          # External port for latest version
    targetPort: 5232  # Internal port in the container
