k8s/service_stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: radicale-service-stable
  labels:
    app: radicale
    version: stable
spec:
  type: LoadBalancer
  selector:
    app: radicale
    version: stable
  ports:
  - protocol: TCP
    port: 90          # External port for stable version
    targetPort: 5232  # Internal port in the container
